Agregar búsqueda de tickets por número de ticket Closes #3
Se implementa un nuevo endpoint para buscar tickets por ticketNumber en
la API. Este endpoint permite a los usuarios filtrar tickets mediante el
número de ticket. Se actualizan las rutas y se ajusta la documentación
en swagger.

- [swagger.json](swagger.json)
- [ticket.routes.ts](src/routes/ticket.routes.ts)
- [ticket.controller.ts](src/controllers/ticket.controller.ts)
